# askbid

./: .env  .env.development  .gitignore  LICENSE  README.md  next.config.js  package.json  tsconfig.json
client/: client.ts  package.json  tsconfig.json
docs/: book.toml  docusaurus.config.js  package.json  sidebars.js
docs/docs/: intro.md
docs/src/: SUMMARY.md  chapter_1.md  introduction.md
lib/: client.ts  phantom.ts
pages/: _app.tsx  index.tsx
pages/results/: [marketId].tsx
program/: Cargo.toml
program/src/: instructions.rs  lib.rs
program/src/instructions/: cancel_order.rs  create_market.rs  create_order.rs  create_result.rs  decide.rs  deposit.rs  fill_order.rs  withdraw.rs
public/client-docs/: index.html  modules.html
public/client-docs/assets/: search.js
public/client-docs/classes/: CreateMarket.html  CreateOrder.html  CreateResult.html  Decide.html  Deposit.html  Instruction.html  Order.html  ResultAccount.html  SearchMarketAccount.html  Withdraw.html
public/docs/: 404.html  chapter_1.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
src/client/: main.ts
src/program/: Cargo.toml
src/program/src/: instructions.rs  lib.rs  test_utils.rs  undecided_result.rs
src/program/src/instructions/: create_result.rs  deposit.rs  withdraw.rs
