[package]
name = "program"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.10"

[dev-dependencies]
solana-program-test = "=1.7.10"
solana-sdk = "=1.7.10"

[lib]
name = "askbid"
crate-type = ["cdylib", "lib"]
