[package]
name = "program"
version = "0.1.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.11"
solana-runtime = "1.7.11"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1"
tokio = "1"

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
name = "askbid"
crate-type = ["cdylib", "lib"]
